--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta property="og:title" content="Toyhouse Raffle App">
+    <meta property="og:description" content="An app for picking raffle winners with no headaches!">
+    <meta property="og:url" content="https://erayalkis.github.io/toyhouse_raffle_app/">
+    <meta property="og:type" content="website">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
