Change favicon and force reload

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="An app for picking raffle winners with no headaches!">
     <meta property="og:url" content="https://erayalkis.github.io/toyhouse_raffle_app/">
     <meta property="og:type" content="website">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico?v=new">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
