--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta property="og:title" content="Toyhouse Raffle App">
-    <meta property="og:description" content="An app for picking raffle winners with no headaches!">
-    <meta property="og:url" content="https://erayalkis.github.io/toyhouse_raffle_app/">
-    <meta property="og:type" content="website">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico?v=new">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta property="og:title" content="Toyhouse Raffle App">
+  <meta property="og:description" content="An app for picking raffle winners with no headaches!">
+  <meta property="og:url" content="https://erayalkis.github.io/toyhouse_raffle_app/">
+  <meta property="og:type" content="website">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico?v=new">
+  <link rel="stylesheet" href="../src/state/">
+  <title>
+    <%= htmlWebpackPlugin.options.title %>
+  </title>
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
