Separate code into components

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta property="og:url" content="https://erayalkis.github.io/toyhouse_raffle_app/">
   <meta property="og:type" content="website">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico?v=new">
-  <link rel="stylesheet" href="../src/state/">
+  <link rel="stylesheet" href="../src/style.css">
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
